# ttie

./: .gitignore  README.md  tt2.cabal  ttie.cabal
examples/: Lemmas.ttie  Prelude.ttie
src/: EqZipper.hs  Eval.hs  Main.hs  Names.hs  Substitution.hs  SubstitutionQQ.hs  Syntax.hs  TcMonad.hs  Tests.hs  Tokenizer.hs  Typing.hs
src/Util/: MyPrelude.hs  Parser.hs  Pretty.hs  PrettyM.hs  WLPPrint.hs
src/Util/Tagged/: Internal.hs  Map.hs  Seq.hs  Var.hs
